hphp/hack/test/typecheck/uninitialised_this7.bad.php.exp
ERROR: File "uninitialised_this7.bad.php", line 9, characters 12-12:
Read access to `$this->i` before initialization (Typing[4083])
